# nycdb

./: .dockerignore  .flake8  .gitignore  .gitmodules  .travis.yml  API.md  Dockerfile  Makefile  Pipfile  README.md  SECURITY.md  changelog.md  check_installation.py  dobjobs.sh  docker-compose.yml  docker_env.sh  docker_run.sh  dof_sales.sh  download.sh  download_pluto.sh  env.sh.sample  hpd_registrations.sh  hpd_violations.sh  nyc_db.sh  pluto.sh  rentstab.sh  sample_setup.sh
src/: .gitignore  ADDING_NEW_DATASETS.md  ADDING_NEW_DATASETS.rst  Makefile  README.md  README.rst  create_dataset.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  tox.ini
src/nycdb/: __init__.py  address.py  annual_sales.py  bbl.py  cli.py  database.py  dataset.py  dataset_transformations.py  datasets.py  datasets.yml  dof_421a.py  dof_parser.py  file.py  geo.py  plugins.py  shapefile.py  sql.py  transform.py  typecast.py  utility.py  verify.py
src/nycdb/datasets/: acris.yml  acris_common.yml  acris_personal.yml  acris_real.yml  boundaries.yml  boundaries_25a.yml  boundaries_water_included.yml  boundaries_water_included_25a.yml  conh.yml  dcp_housingdb.yml  dhs_daily_shelter_count.yml  dob_certificate_occupancy.yml  dob_complaints.yml  dob_safety_violations.yml  dob_vacate_orders.yml  dob_violations.yml  dobjobs.yml  dof_421a.yml  dof_annual_sales.yml  dof_exemptions.yml  dof_property_charge.yml  dof_property_valuation_and_assessments.yml  dof_sales.yml  dof_tax_lien_sale_list.yml  dohmh_rodent_inspections.yml  dos_active_corporations.yml  ecb_violations.yml  executed_evictions.yml  fc_shd.yml  hpd_aep.yml  hpd_affordable_production.yml  hpd_certification_of_no_harassment.yml  hpd_charges.yml  hpd_complaints.yml  hpd_conh.yml  hpd_hwo_charges.yml  hpd_inclusionary.yml  hpd_jurisdiction.yml  hpd_litigations.yml  hpd_ll44.yml  (+41 more)
src/nycdb/sql/: acris.sql  acris_personal.sql  acris_real.sql  boundaries.sql  boundaries_25a.sql  boundaries_water_included.sql  boundaries_water_included_25a.sql  conh.sql  dcp_housingdb.sql  dob_certificate_occupancy.sql  dob_complaints.sql  dob_safety_violations.sql  dob_vacate_orders.sql  dob_violations.sql  dof_exemptions.sql  dof_property_charge.sql  dof_property_valuation_and_assessments.sql  dof_sales.sql  dof_tax_lien_sale_list.sql  dohmh_rodent_inspections.sql  dos_active_corporations.sql  ecb_violations.sql  executed_evictions.sql  (+42 more)
src/scripts/: boundaries-test-data.sh  boundaries-water-included-test-data.sh  createExtensionPostGIS.sql  create_dataset.py  nynta-test-data.sh  pluto-test-data.sh  start-pg-docker  test  upload  wait-for-pg.sh  zipcodes-test-data.sh
src/tests/: test_database.py  test_dataset.py  test_nycdb.py  test_transform.py  test_typecast.py
(+255 files in other folders)
